--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+
 .container {
   width: 100%;
   max-width: 1310px;
@@ -55,11 +57,306 @@ nav .cart::before {
   background-color: white;
 }
 
+.green {
+  background-color: rgb(96, 197, 72);
+}
+
 /* Main section  */
 
 .welcome-section {
-  height: 100vh;
+  height: 500px;
   background: url(/assets/images/Transparent_Vase_with_Red_Tulips.png) 70% 10%
     no-repeat;
-  background-size: 700px 100%;
+  background-size: 700px 600px;
+  font-family: serif;
+  color: white;
+}
+
+@media (max-width: 769px) {
+  .welcome-section {
+    background-position: 50% -280%;
+    justify-content: start;
+  }
+}
+
+.welcome-section .row {
+  height: 100%;
+}
+
+.welcome-info {
+  margin-top: 80px;
+}
+.welcome-section h2 {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.welcome-section h3 {
+  font-size: 18px;
+}
+
+.welcome-section button {
+  border-radius: 20px;
+}
+
+.white {
+  background-color: white;
+}
+
+.section-header h2 {
+  font-size: 24px;
+  font-family: serif;
+}
+
+.shift-buttons {
+  color: grey;
+  font-size: 16px;
+}
+
+.discount {
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  background-color: rgb(23, 199, 23);
+  font-size: 13px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.price {
+  font-size: 13px;
+  color: gray;
+}
+
+.title {
+  color: black;
+  font-family: serif;
+}
+
+.price i {
+  font-size: 13px;
+  color: purple;
+  font-size: 11px;
+}
+
+.flower-item {
+  background-color: rgb(243, 243, 243);
+  border: rgb(243, 243, 243);
+}
+
+.flower-image {
+  height: 236px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.flower-image-one {
+  height: 568px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.fixed-height {
+  height: 300px;
+}
+
+.flower-image-big {
+  height: 100%;
+}
+
+@media (max-width: 768px) {
+  .flower-image-one,
+  .flower-image {
+    height: auto;
+  }
+}
+
+.block-title {
+  color: white;
+}
+
+.block-title h2 {
+  font-size: 24px;
+  font-family: serif;
+}
+
+.block-title i {
+  color: white;
+}
+
+.h-400 {
+  height: 400px;
+}
+
+.h-400 > img {
+  border-radius: 5px;
+}
+
+.center-image {
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.top-picks .block-title {
+  color: gray;
+}
+
+.top-picks {
+  background-color: white;
+}
+
+.heart {
+  display: block;
+  color: purple;
+}
+
+.price-buttons .first {
+  border: 1px solid greenyellow;
+}
+.btn-price {
+  border-radius: 24px;
+  font-size: 10px;
+  padding: 3px 35px;
+  outline: none;
+}
+
+.price-buttons > a:hover {
+  border: 1px solid greenyellow;
+}
+
+.add-to-cart span {
+  margin-right: 4px;
+  font-size: 16px;
+}
+
+.add-to-cart i {
+  color: purple;
+}
+
+.flower-btn {
+  font-size: 24px;
+  border-radius: 25px;
+}
+
+.gray {
+  color: gray;
+}
+
+.person-img {
+  height: 80px;
+  background-color: red;
+  width: 80px;
+  border-radius: 50px;
+  margin-right: 15px;
+}
+
+.person-info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.person-details h2 {
+  font-weight: bold;
+}
+
+.person-details h3 {
+  color: gray;
+  font-size: 16px;
+  font-style: italic;
+}
+
+.person-details span {
+  color: green;
+}
+
+.person-summary p {
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.dots-container {
+  display: flex;
+}
+
+.horizontal {
+  margin: 20px 0;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.vertical {
+  margin: 0 20px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.dots-container .dot {
+  height: 10px;
+  width: 10px;
+  margin: 0 7px;
+  border-radius: 50%;
+}
+
+.dots-container .dot:first-child {
+  background-color: white;
+}
+
+.dots-container .dot:nth-child(2),
+.dots-container .dot:last-child {
+  background-color: rgb(158, 245, 158);
+}
+
+.map {
+  height: 500px;
+  width: 100%;
+  background-image: url(/assets/images/location.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
+}
+
+.footer-content {
+  padding: 0 40px;
+}
+
+.contact-us {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 16px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+
+.footer-links {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-links li {
+  width: 50%;
+  color: gray;
+}
+
+.footer-links li a {
+  color: gray;
+}
+
+.footer-links li a:nth-child(even) {
+  text-decoration: underline;
 }
