--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,6 +57,15 @@ nav .cart::before {
   background-color: white;
 }
 
+.nav-right a {
+  color: #cbfcbd;
+}
+
+.nav-right a:hover {
+  color: white;
+  text-decoration: none;
+}
+
 .green {
   background-color: rgb(96, 197, 72);
 }
@@ -144,7 +153,7 @@ nav .cart::before {
 
 .flower-item {
   background-color: rgb(243, 243, 243);
-  border: rgb(243, 243, 243);
+  border: rgb(209, 205, 205);
 }
 
 .flower-image {
@@ -214,7 +223,7 @@ nav .cart::before {
   background-color: white;
 }
 
-.heart {
+.heart-2 {
   display: block;
   color: purple;
 }
@@ -225,7 +234,7 @@ nav .cart::before {
 .btn-price {
   border-radius: 24px;
   font-size: 10px;
-  padding: 3px 35px;
+  padding: 3px 25px;
   outline: none;
 }
 
@@ -359,4 +368,270 @@ nav .cart::before {
 
 .footer-links li a:nth-child(even) {
   text-decoration: underline;
+}
+
+/* product list styling */
+
+.product-list {
+  padding: 40px 60px;
+}
+
+.product-list section h2 {
+  text-transform: uppercase;
+  font-size: 24px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+}
+
+.filter-by-price h3 {
+  color: rgb(31, 31, 31);
+  font-style: italic;
+  font-size: 16px;
+}
+
+.filter-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-row-xd {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.track-progress {
+  border: 1px solid green;
+  width: 120px;
+  height: 1px;
+  margin-top: 10px;
+  z-index: 100;
+  background-color: green;
+}
+
+.track-progress:before {
+  content: "";
+  display: inline-block;
+  border-radius: 50%;
+  height: 10px;
+  position: relative;
+  width: 10px;
+  bottom: 11px;
+  left: -2px;
+  border: 2px solid green;
+  background-color: white;
+}
+
+.track-progress:after {
+  content: "";
+  display: inline-block;
+  border-radius: 50%;
+  height: 10px;
+  position: relative;
+  width: 10px;
+  bottom: 11px;
+  right: -100px;
+  border: 2px solid green;
+  background-color: white;
+}
+
+.bar {
+  position: relative;
+  top: -2px;
+  border: 1px solid gray;
+  width: 150px;
+  background-color: gray;
+}
+
+/* price inputs */
+
+.min-max-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0;
+}
+
+.min-max-price input {
+  width: 70px;
+  height: 25px;
+  border: 1px solid rgb(5, 170, 5);
+  outline: none;
+  font-size: 13px;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+.color-item {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+}
+
+.color-item:first-child {
+  background-color: rgb(245, 14, 245);
+}
+
+.color-item:nth-child(2) {
+  background-color: peru;
+}
+
+.color-item:nth-child(3) {
+  background-color: purple;
+}
+
+.color-item:nth-child(4) {
+  background-color: rgb(113, 35, 202);
+}
+
+.color-item:nth-child(5) {
+  background-color: rgb(59, 10, 172);
+}
+
+.categories .form-check input {
+  outline: none;
+  outline: 2px solid green;
+}
+
+/* filter checkbox styling */
+
+.checkbox-container {
+  display: block;
+  position: relative;
+  padding-left: 25px;
+  margin-bottom: 8px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+  color: black;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 4px;
+  left: 0;
+  border-radius: 3px;
+  height: 14px;
+  width: 14px;
+  border: 1px solid green;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox-container:hover input ~ .checkmark {
+  /* background-color: #ccc; */
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox-container input:checked ~ .checkmark {
+  /* background-color: #2196f3; */
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+  top: 6px;
+}
+
+/* Show the checkmark when checked */
+.checkbox-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox-container .checkmark:after {
+  left: 3px;
+  top: 0px;
+  width: 5px;
+  height: 10px;
+  border: solid grey;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.filter-submit {
+  font-size: 16px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+/* product page styling */
+
+.green {
+  background-color: green !important;
+}
+
+.light-green {
+  background-color: rgb(13, 240, 13) !important;
+}
+
+.product-page-img {
+  height: 400px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  overflow: hidden;
+}
+
+.pink i {
+  color: purple;
+}
+
+.color-filter-check {
+  font-size: 12px;
+  font-family: serif;
+}
+
+.price-one {
+  text-decoration: line-through;
+  font-size: 14px;
+  color: gray;
+}
+
+.price-two {
+  font-size: 18px;
+}
+
+/* .box-shadow {
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px 8px 10px #114107;
+} */
+
+.btn-sm-filter {
+  width: 100%;
+}
+.btn-sm-filter a {
+  background-color: white !important;
+  border: 2px solid rgb(13, 241, 13) !important;
+  color: rgb(13, 241, 13) !important;
+  width: 100%;
+  border-radius: 4px;
+  /*
+  display: block;
+  outline: none;
+  font-weight: bold;
+   */
 }
