added hover effects to filter button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -629,9 +629,15 @@ nav .cart::before {
   color: rgb(13, 241, 13) !important;
   width: 100%;
   border-radius: 4px;
+  outline: none !important;
   /*
   display: block;
-  outline: none;
   font-weight: bold;
    */
+}
+
+.btn-sm-filter a:hover {
+  background-color: rgb(13, 241, 13) !important;
+  color: white !important;
+  border: none;
 }
