finalize on the footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,10 @@ nav .cart::before {
   color: gray;
 }
 
+.links-even {
+  text-decoration: underline;
+}
+
 .nav-right a:hover {
   color: white;
   text-decoration: none;
