add citation to the wireframes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,8 +86,7 @@ nav .cart::before {
 
 .welcome-section {
   height: 500px;
-  background:
-    url(/assets/images/Transparent_Vase_with_Red_Tulips.png) 70% 10%
+  background: url(/assets/images/Transparent_Vase_with_Red_Tulips.png) 70% 10%
     no-repeat;
   background-size: 700px 600px;
   font-family: serif;
@@ -241,6 +240,10 @@ nav .cart::before {
   color: purple;
 }
 
+.heart-2:hover {
+  color: red;
+}
+
 .price-buttons .first {
   border: 1px solid greenyellow;
 }
@@ -276,7 +279,7 @@ nav .cart::before {
 
 .person-img {
   height: 80px;
-  background-color: red;
+  /* background-color: red; */
   width: 80px;
   border-radius: 50px;
   margin-right: 15px;
