--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -348,7 +348,9 @@ nav .cart::before {
   background-image: url(/assets/images/location.jpeg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100% 100%;
+  /* background-size: 100% 100%; */
+  /* background: url('image.png') no-repeat center fixed;      */
+  background-size: cover;
 }
 
 .footer-content {
